apps/mqtt/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: argocd
spec:
  type: ClusterIP
  selector:
    app: mosquitto
  ports:
    - name: mqtt
      protocol: TCP
      port: 1883
      targetPort: 1883
    - name: mqtt-ws
      protocol: TCP
      port: 9001
      targetPort: 9001
