apps/mqtt/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosquitto-ws
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: mqtt.discovery.local
      http:
        paths:
          - path: /mqtt(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: mosquitto
                port:
                  number: 9001
